archive/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-paperless-ngx
  labels:
    gitops: flux
