archive/paperless-ngx/deployment-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-broker
  namespace: svc-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: broker
  template:
    metadata:
      labels:
        app: paperless-ngx
        component: broker
    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: broker
          image: docker.io/library/redis:8.8.0
          volumeMounts:
            - name: redisdata
              mountPath: /data
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { cpu: "1", memory: 1Gi }
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: paperless-redisdata
