archive/paperless-ngx/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-db
  namespace: svc-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      labels:
        app: paperless-ngx
        component: db
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: db
          image: docker.io/library/postgres:17
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data/pgdata
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { cpu: "1", memory: 1Gi }
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: paperless-pgdata
