archive/paperless-ngx/deployment-gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: svc-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gotenberg
  template:
    metadata:
      labels:
        app: paperless-ngx
        component: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: docker.io/gotenberg/gotenberg:8.22
          command:
            - "gotenberg"
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { cpu: "1", memory: 1Gi }
