archive/paperless-ngx/service-broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-broker
  namespace: svc-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    component: broker
