archive/paperless-ngx/service-gotenberg.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: svc-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    component: gotenberg
